# owge

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
rust-backend/: .dockerignore  .gitignore  Cargo.toml  README.md  run-local.sh  watch-local.sh
rust-backend/docs/: BDD-DIVERGENCE-BACKLOG.md  BDD-PARITY-PLAN.md  BUG-SPECIAL-LOCATION-UNLOCK.md  M3-CONTRACTS.md  M3-INTEGRATION-PLAN.md  M4-CONTRACTS.md  M4-INTEGRATION-PLAN.md  PORTING-ROADMAP.md  UNPORTED-ENDPOINTS.md  VERIFY-EDGECASES-C-D-F.md  WIKI-GENERATOR-PLAN.md  inventory.json
rust-backend/owge-business/: Cargo.toml
rust-backend/owge-business/src/: config.rs  db.rs  error.rs  jwt.rs  lib.rs  lock.rs
rust-backend/owge-business/src/bo/: active_time_special_bo.rs  active_time_special_rule_finder_bo.rs  admin_user_bo.rs  alliance_bo.rs  attack_mission_manager_bo.rs  attack_rule_bo.rs  configuration_bo.rs  critical_attack_bo.rs  faction_bo.rs  galaxy_bo.rs  image_store_bo.rs  improvement_bo.rs  java_random.rs  mission_base_service_bo.rs  mission_bo.rs  mission_configuration_bo.rs  mission_event_emitter.rs  mission_finder_bo.rs  mission_interception_manager_bo.rs  mission_report_bo.rs  mission_report_manager_bo.rs  mission_scheduler_bo.rs  mission_time_manager_bo.rs  mod.rs  object_relation_bo.rs  obtained_unit_bo.rs  obtained_unit_event_emitter.rs  planet_bo.rs  planet_list_bo.rs  ranking_bo.rs  realtime_emitter.rs  requirement_bo.rs  requirement_engine.rs  requirement_group_bo.rs  return_mission_registration_bo.rs  rule_bo.rs  running_mission_finder_bo.rs  special_location_bo.rs  speed_impact_group_bo.rs  system_message_bo.rs  (+16 more)
rust-backend/owge-business/src/bo/emitter/: mod.rs  unit_type_emitter.rs
rust-backend/owge-business/src/bo/mission_processor/: attack.rs  conquest.rs  counterattack.rs  deploy.rs  establish_base.rs  explore.rs  gather.rs  mod.rs  return_mission.rs
rust-backend/owge-business/src/bo/obtained_unit_entity/: galaxy.rs  mod.rs  obtained_unit.rs  planet.rs  temporal_information.rs  (+3 more)
rust-backend/owge-business/src/builder/: mod.rs  unit_mission_report_builder.rs
rust-backend/owge-business/src/dto/: alliance.rs  attack_rule.rs  configuration.rs  critical_attack.rs  critical_attack_information.rs  faction.rs  galaxy.rs  image_store.rs  improvement.rs  mission.rs  mission_report_information.rs  mission_websocket.rs  mod.rs  obtained_unit.rs  planet.rs  planet_list.rs  ranking.rs  requirement.rs  requirement_information.rs  rule.rs  running_unit_build.rs  serde_helpers.rs  special_location.rs  speed_impact_group.rs  system_message.rs  time_special.rs  translatable.rs  tutorial.rs  unit.rs  unit_type.rs  upgrade.rs  user.rs  user_improvement.rs  websocket.rs
rust-backend/owge-business/src/model/: admin_user.rs  alliance.rs  attack_rule.rs  configuration.rs  critical_attack.rs  faction.rs  galaxy.rs  image_store.rs  mission.rs  mod.rs  object_relation.rs  obtained_unit.rs  planet.rs  planet_list.rs  ranking.rs  rule.rs  special_location.rs  speed_impact_group.rs  system_message.rs  time_special.rs  tutorial.rs  unit.rs  unit_type.rs  upgrade.rs  user_storage.rs
rust-backend/owge-business/src/pojo/: mod.rs  unit_mission_information.rs
rust-backend/owge-business/src/websocket/: emitter.rs  mod.rs  sync.rs
rust-backend/owge-business/tests/: rsa_compat.rs
rust-backend/owge-business/tests/fixtures/: test_rsa_private.pem  test_rsa_public.pem
rust-backend/owge-rest/: Cargo.toml
rust-backend/owge-rest/src/: auth.rs  http_error.rs  main.rs  socketio.rs  state.rs
rust-backend/owge-rest/src/routes/: mod.rs  open.rs
rust-backend/owge-wiki-gen/: Cargo.toml
rust-backend/owge-wiki-gen/assets/: search.js  style.css
rust-backend/owge-wiki-gen/src/: build.rs  i18n.rs  main.rs  render.rs  view.rs  watch.rs
rust-backend/owge-wiki-gen/templates/: base.html  configuration.html  entity.html  faction.html  galaxies.html  grouped_list.html  index.html  list.html  list_row.html  travel_groups.html  unit_types.html
rust-backend/pending_migration/: 01-user_data_change.md  02-unit_type_change.md  03-unit_unlocked_change.md  04-unit_requirements_change.md  05-obtained_upgrades_change.md  06-unit_obtained_change.md  ATTACK_FEATURE_AUDIT.md  ATTACK_PARITY_PLAN.md  RESOLUTION.md
rust-backend/scripts/: mint_jwt.py  seed_attack.sql  seed_attack_asymmetric.sql  seed_attack_partialkill.sql  seed_build.sql  seed_capture.sql  seed_conquest.sql  seed_counterattack.sql  seed_deleteuser.sql  seed_deploy.sql  seed_gather.sql  seed_interception.sql  seed_levelup.sql  seed_reqtrigger.sql  seed_temporal_units.sql
rust-backend/scripts/bdd_parity/: Cargo.toml  README.md  normalize_ws.py  run_bdd_parity.sh
rust-backend/scripts/bdd_parity/features/: alliance.feature  combat.feature  missions_explore_gather_cancel.feature  missions_travel.feature  planet_list.feature  smoke.feature  special_location_unlock.feature  time_specials.feature  unit_build.feature  upgrades.feature
rust-backend/scripts/bdd_parity/inventories/: alliance.md  missions-combat.md  missions-explore-gather-cancel.md  missions-travel.md  planet-user-misc.md  time-specials.md  unit-build.md  upgrades.md
rust-backend/scripts/bdd_parity/src/: main.rs  world.rs
rust-backend/scripts/mission_verify/: README.md  dump_mission_state.sh  run_mission_parity.sh  table_diff.py  trace_diff.py
rust-backend/scripts/ws_verify/: README.md  compare_rest_sync.sh  rest_sync_diff.py  seed_user1_full_compare.sql  ws_capture.js
(+2759 files in other folders)
