[workspace]
resolver = "2"
members = ["owge-business", "owge-rest"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Kevin Guanche Darias <kevin@kevinguanchedarias.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 2
